# uv-monorepo

./: .gitignore  .justfile  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: this.py
shared/utils/: pyproject.toml
shared/utils/src/utils/: __init__.py
src/core/: pyproject.toml
src/core/src/core/: __init__.py  cli.py
tests/scripts/: test_this.py
tests/shared/utils/: test_return_one.py
tests/src/core/: test_return_two.py
