[project]
name = "monorepo"
version = "0.0.0"
description = "Example of monorepo setup using UV"
authors = [
  {name="Jasper Ginn", email="jasperginn@gmail.com"}
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "typer>=0.12.5",
    "sh>=2.0.7",
    # Utility
    "utils",
    # Core
    "core",
]

[tool.uv.sources]
utils = { workspace = true }
core = { workspace = true }

[tool.uv.workspace]
members = [
  "shared/*", "src/*"
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ipykernel>=6.29.5",
    "pytest>=8.3.2",
]
package = false

[tool.black]
line-length = 88
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    | .notebooks
    | .nox
  )
)
'''

[tool.isort]
profile = "black"
extend_skip = [".tmp", ".venv"]

[tool.mypy]
exclude = "^.tmp/"
ignore_missing_imports = true

[tool.bandit]
skips = ['B101']

[tool.ruff]
lint.ignore = ["E501"]
extend-exclude = [
  "__pycache__",
  "docs",
  "site",
  ".tmp"
]

[tool.pytest.ini_options]
cache_dir = "/home/vscode/workspace/.cache/pytest"
pythonpath = [".", "scripts"]
