[project]
name = "core"
version = "0.0.0"
description = "Core functionality"
authors = [
  {name="Jasper Ginn", email="jasperginn@gmail.com"}
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "utils",
    "typer>=0.12.5"
]

[project.scripts]
core = "core.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
utils = { workspace = true }
